--- a/views/partials/modals/modalgestuser.hbs
+++ b/views/partials/modals/modalgestuser.hbs
@@ -24,19 +24,16 @@ Modal / Admin : Gestion user
                         </div>
                         <div class="col-md-6">
                             <label for="firstname" class="form-label">Firstname</label>
-                            <input name="firstname" type="text" class="form-control" id="firstname{{ this.id }}" value="..."
-                                >
+                            <input name="firstname" type="text" class="form-control" id="firstname{{ this.id }}"
+                                value="...">
                         </div>
                         <div class="col-md-6">
                             <label for="name" class="form-label">Name</label>
-                            <input name="name" type="text" class="form-control" id="name{{ this.id}}" value="..."
-                                >
+                            <input name="name" type="text" class="form-control" id="name{{ this.id}}" value="...">
                         </div>
-                       
+
                     </div>
                     <div class="modal-footer">
-                       
-                            <button type="submit" class="btn btn-danger">Banned</button>
                         <button type="submit" class="btn btn-primary">Save
                             changes</button>
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
@@ -47,3 +44,4 @@ Modal / Admin : Gestion user
             </form>
         </div>
     </div>
+</div>
