--- a/views/partials/Admin/gestblog.hbs
+++ b/views/partials/Admin/gestblog.hbs
@@ -49,7 +49,7 @@ Partial : Admin/ Gestion Blog
                                     </button>
                                 </form>
                             </div>
-                            <p class="text-muted">Date: {{ this.dateart }} </p>
+                            <p class="text-muted">Posté le {{{formatDate dateart "DD MMMM YYYY à HH:mm"}}} </p>
 
                         </div>
                     </div>
