--- a/views/partials/blog/cards.hbs
+++ b/views/partials/blog/cards.hbs
@@ -16,14 +16,16 @@ Partial : blog/Cards
                         <p class="card-text">{{this.description}}</p>
                         <p class="card-text text-muted">Author :</p>
                         <div class="card-footer  bg-transparent">
-                            <a href="blog/{{ title }}" class="btn btn-ghost">Voir l'article</a></div>
-                            <p class="text-muted">Date: {{ this.dateart }} </p>
+                            <a href="blog/{{ title }}" class="btn btn-ghost">Voir l'article</a>
+                        </div>
+                        <p class="text-muted">Posté le {{{formatDate dateart "DD MMMM YYYY à HH:mm"}}} </p>
                     </div>
                 </div>
             </div>
 
             {{/each}}
-
+            
         </div>
+
     </div>
 </section>
