--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -18,35 +18,40 @@ Page type:Partial Footer /
         </div>
         <div class="row">
             <div class="col-md-4 ">
-                <ul class="navbar-nav me-auto mb-2mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="/">Accueil</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/blog">Blog</a>
-                    </li>
-                    {{#if user}}
-                    <li class="nav-item">
-                        <a class="nav-link" href="/pics">Photos</a>
-                    </li>
-                    {{/if}}
-                    <li class="nav-item">
-                        <a class="nav-link" href="/contact">Nous contacter</a>
-                    </li>
-                    {{#if isAdmin }}
-                    <li class="nav-item">
-                        <a class="nav-link" href="/admin">Admin</a>
-                    </li>
-                    {{/if }}
-                </ul>
+                <nav class="navbar-dark">
+                    <ul class="navbar-nav me-auto mb-2mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link" aria-current="page" href="/">Accueil</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/blog">Blog</a>
+                        </li>
+                        {{#if user}}
+                        <li class="nav-item">
+                            <a class="nav-link" href="/pics">Photos</a>
+                        </li>
+                        {{/if}}
+                        <li class="nav-item">
+                            <a class="nav-link" href="/contact">Nous contacter</a>
+                        </li>
+                        {{#if isAdmin }}
+                        <li class="nav-item">
+                            <a class="nav-link" href="/admin">Admin</a>
+                        </li>
+                        {{/if }}
+                    </ul>
+                </nav>
 
             </div>
 
             <div class="col-md-4">
-                <a class="navbar-brand" href="/"><img src="/assets/images/logo2.png" alt="" width="40" height="35">
+
+                <a class="navbar-brand d-flex justify-content-center" href="/contact"><img src="/assets/images/logo2.png" alt="" width="40"
+                        height="35">
                     Graines
                     de
                     Citoyen Montgesnois</a>
+
             </div>
 
             <div class="col-md-4">
