--- a/views/partials/home/cards.hbs
+++ b/views/partials/home/cards.hbs
@@ -21,7 +21,7 @@ Partial : Home/Cards (News)
                         <p class="card-text text-muted">Author :</p>
                         <div class="card-footer  bg-transparent">
                             <a href="blog/{{ title }}" class="btn btn-ghost">Voir l'article</a></div>
-                            <p class="text-muted">Date: {{ this.dateart }} </p>
+                            <p class="text-muted">Posté le {{{formatDate dateart "DD MMMM YYYY à HH:mm"}}} </p>
                     </div>
                 </div>
             </div>
