--- a/views/partials/navbar/navbar.hbs
+++ b/views/partials/navbar/navbar.hbs
@@ -10,7 +10,7 @@ Partial : navabar
             aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <a class="navbar-brand" href="/"><img src="/assets/images/logo2.png" alt="" width="40" height="35"> Graines
+        <a class="navbar-brand" href="/contact"><img src="/assets/images/logo2.png" alt="" width="40" height="35"> Graines
             de
             Citoyen Montgesnois</a>
         <div class="collapse navbar-collapse" id="navbarToggler">
