--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -46,9 +46,9 @@ Page type:Partial Footer /
 
             <div class="col-md-4">
 
-                <a class="navbar-brand d-flex justify-content-center" href="/contact"><img src="/assets/images/logo2.png" alt="" width="40"
-                        height="35">
-                    Graines
+                <a class="navbar-brand d-flex justify-content-center" href="/contact"><img
+                        src="/assets/images/logo-modified.png" alt="" width="40" height="35">
+                     Graines
                     de
                     Citoyen Montgesnois</a>
 
