--- a/views/partials/home/cards.hbs
+++ b/views/partials/home/cards.hbs
@@ -2,7 +2,7 @@
 Partial : Home/Cards (News)
 --}}
 <!--- Cards-->
-<section class="famille-cards" id="cards">
+<section id="cards">
     <div class="container">
         <div class="row">
             <div class="col-md-12">
