--- a/views/partials/Admin/gestcoms.hbs
+++ b/views/partials/Admin/gestcoms.hbs
@@ -36,14 +36,18 @@ Partial : Admin/ Gestion commentaires
                         {{#each dbcommentaires }}
                         <div class="col-md-12">
                             <div class="client-profil position-relative">
-                                <cite> <img src="/assets/images/blaise.jpg"> {{ this.pseudouser }}</cite>
+
+                                <cite> <img src="/assets/data/users/{{ this.imguser }}">
+
+                                    {{ this.pseudouser }}</cite>
                                 <blockquote>
 
-                                   {{ this.content }}
+                                    {{ this.content }}
                                     <!------ Button trigger modal --------->
                                     <button class="btn-danger" type="button" data-bs-toggle="modal"
                                         data-bs-target="#MessModal"><i class="fas fa-trash-alt "></i></button>
                                 </blockquote>
+                                  <p class="text-muted">Posté le {{{formatDate datecom "DD MMMM YYYY à HH:mm"}}} </p>
                             </div>
 
                         </div>
