--- a/views/partials/blogid/coms/coms.hbs
+++ b/views/partials/blogid/coms/coms.hbs
@@ -6,19 +6,19 @@ Partial : Id/Commentaires
     <div class="container">
 
         <div class="col-md-12">
-            <h2>Comments</h2>
+            <h2>Commentaires</h2>
         </div>
 
         {{#each dbcommentaires }}
 
         <div class="col-md-12">
             <div class="client-profil position-relative">
-                {{#if user}}
-                <cite> <img src="/assets/data/users/{{ user.imguser }}"> {{ user.pseudo }}</cite>
-                {{/if}}
+                <cite> <img src="/assets/data/users/{{ this.imguser }}">
+                    {{ this.pseudouser}}</cite>
                 <blockquote>
                     {{ this.content }}
                 </blockquote>
+                  <p class="text-muted">Posté le {{{formatDate datecom "DD MMMM YYYY à HH:mm"}}} </p>
             </div>
 
 
