--- a/views/partials/modals/modalsupprcoms.hbs
+++ b/views/partials/modals/modalsupprcoms.hbs
@@ -3,7 +3,7 @@ Modal / Admin : Suppr coms
 --}}
 
 <!------------------------- Modal suppr coms ------------------------->
-<div class="modal fade" id="MessModal" tabindex="-1" aria-labelledby="ModalLabel" aria-hidden="true">
+<div class="modal fade" id="MessModal{{ this.idcommentaire }}" tabindex="-1" aria-labelledby="ModalLabel" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
