--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -70,7 +70,7 @@ Page type:Partial Footer /
             <a href="#"> <i class="fab fa-instagram black"></i></a>
         </div>
 
-        <p class="copyright">Created by Lucas Ledoux© 2021-2022 <a href="#">Mentions légales</a></p>
+        <p class="copyright">Created by Lucas Ledoux© 2021-2022 <a href="/CGU">Mentions légales</a></p>
     </div>
 
 </footer>
