--- a/views/partials/Admin/gestblog.hbs
+++ b/views/partials/Admin/gestblog.hbs
@@ -46,7 +46,7 @@ Partial : Admin/ Gestion Blog
                             <div class="col-6">
                                
                                     <button class="btn btn-danger" name="DeleteCard" type="submit" data-bs-toggle="modal"
-                                    data-bs-target="#DelBlog"> Delete
+                                    data-bs-target="#DelBlog{{this.id}}"> Delete
                                     </button>
                                
                             </div>
