--- a/views/partials/modals/modalsupprblog.hbs
+++ b/views/partials/modals/modalsupprblog.hbs
@@ -3,7 +3,7 @@ Modal / Admin : Suppr blog
 --}}
 
 <!------------------------- Modal suppr coms ------------------------->
-<div class="modal fade" id="DelBlog" tabindex="-1" aria-labelledby="ModalLabel" aria-hidden="true">
+<div class="modal fade" id="DelBlog{{this.id}}" tabindex="-1" aria-labelledby="ModalLabel" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
