--- a/views/partials/blog/searchbar.hbs
+++ b/views/partials/blog/searchbar.hbs
@@ -6,7 +6,7 @@ Partial : Home/Search-bar
     <div class="search-bar">
         <form class="d-flex">
             <span class="input-group-text"><i class="fas fa-search"></i></span>
-            <input class=" form-control me-2" type="text" id="inputFilter" onkeyup="monFiltre()" placeholder="Search"
+            <input class=" form-control me-2" type="search" id="inputFilter" onkeyup="monFiltre()" placeholder="Search"
                 aria-label="Search" aria-describedby="addon-wrapping">
         </form>
     </div>
