--- a/views/partials/modals/modalLostpass.hbs
+++ b/views/partials/modals/modalLostpass.hbs
@@ -22,7 +22,7 @@ Modal / navbar : Lost password
 
                     </div>
                     <div class="modal-footer">
-                        <button class="btn btn-contact" data-bs-target="#connectModal" data-bs-toggle="modal">Se
+                        <button type="submit" class="btn btn-contact" data-bs-target="#connectModal" data-bs-toggle="modal">Se
                             connecter</button>
                     </div>
                 </form>
