--- a/public/css/style.css
+++ b/public/css/style.css
@@ -355,6 +355,9 @@ img[data-modal] {
     border-radius: 5px;
     margin-bottom: 15px;
 }
+.relative{
+    position:relative;
+}
 
 .photospage {
     height: 325px;
