--- a/views/partials/editPassword.hbs
+++ b/views/partials/editPassword.hbs
@@ -1,79 +1,48 @@
 {{!--
-Partial : register/ New user
+Page type:: Mot de passe oublié
 --}}
 
-
-<div class="text-center"id='flash'></div>
-<!---Sign in--->
 <section>
-    <h2>S'inscrire</h2>
     <div class="container">
-        <div class="col-md-12">
-            <h5>Le mot de passe doit contenir minimum 8 character dont:</h5>
-            <ul>
-                <li> 1 numéro</li>
-                <li> 1 majuscule</li>
-                <li> 1 minuscule</li>
-                <li> 1 caracthère spécial</li>
-            </ul>
+        <h2>Editeur de Mot de passe</h2>
+        <div class="text-center" id='flash'></div>
+        <div class="col-md-12 text-center">
+            <img src="/assets/images/gif/sablier.gif" alt="paysage" class="present-img">
         </div>
 
-        <form id="form"  action="/register" method="post" enctype="multipart/form-data" onsubmit="checkForm(event)"
-            class=" row g-3">
-
+        {{!-- Form de edition du mot de passe --}}
+        <form onsubmit="checkForm(event)" action="/editPassword/:id" method="POST" id="form" class="row g-3">
+            {{!-- Hidden --}}
+            <input type="hidden" name='email' value='{{ mailOptions.to }}'>
             <div class="row">
-                <div class="mb-3">
-                    <label for="formFile" class="form-label">Photo de Profil</label>
-                    <input name="imguser" type="file" class="form-control" id="formFile">
-                </div>
-                <div class="col-md-12">
-                    <label class="form-label">Nom d'utilisateur:</label>
-                    <div class="input-group">
-                        <span class="input-group-text">@</span>
-                        <input name="pseudo" type="text" class="form-control" aria-describedby="inputGroupPrepend">
-                    </div>
-                </div>
-
                 <div class="col-md-6">
-                    <label class="form-label">Prénom:</label>
-                    <input name="firstname" type="text" class="form-control">
+                    <input class="form-control" type="password" name="password" id='password'
+                        placeholder="Votre nouveau mot de passe" required>
                 </div>
                 <div class="col-md-6">
-                    <label class="form-label">Nom:</label>
-                    <input name="name" type="text" class="form-control">
+                    <input class="form-control" type="password" name="passwordConfirm" id='passwordConfirm'
+                        placeholder="Confirmer votre nouveau mot de passe" required>
                 </div>
-                <div class="col-md-12">
-                    <label class="form-label">Adresse Email :</label>
-                    <input name="email" type="email" class="form-control" placeholder="name@example.com">
-                </div>
-                <div class="col-md-6">
-                    <label for="Password" class="form-label">Mot de passe</label>
-                    <input name="password" type="password" class="form-control" id="password" required>
-                </div>
-                <div class="col-md-6">
-                    <label for="Password" class="form-label">Confirmer mot de passe :</label>
-                    <input name="passwordConfirm" type="password" class="form-control" id="passwordConfirm" required>
-                </div>
-
             </div>
-            <div class="col-12">
+
+            <div class="col-md-12">
                 <div class="form-check">
-                    <input name="Terms" class="form-check-input" type="checkbox" id="accept" required>
+                    <input name="Terms" class="form-check-input text-center" type="checkbox" id="accept" required>
                     <label class="form-check-label">
                         Agree to terms and conditions
                     </label>
 
                 </div>
             </div>
+
             <div class="col-12 d-grid gap-2 d-md-flex justify-content-md-center">
-                <button type="submit" class="btn btn-contact">Créer un compte</button>
+                <button type="submit" class="btn btn-contact">Confirmer</button>
             </div>
         </form>
-    </div>
+
 
     </div>
 </section>
-
 {{!-- Script --}}
 <script>
     // Déclaration de constante
@@ -108,9 +77,9 @@ Partial : register/ New user
             flash.innerText = 'Vous devez acceptez les conditions !';
             // Et si toute les conditions son respecter alors on envoit le formulaire
         } else if (pass.match(regex) && pass === passConfirm && accept === true) {
-            alert("Confirmation de l'envoi du formulaire");
+            alert("Confirmer l'envoie du formulaire");
             // C'est ici que le formulaire s'envoie
-            form.submit()
+            form.submit();
         }
     }
 </script>
