--- a/views/partials/err.hbs
+++ b/views/partials/err.hbs
@@ -9,19 +9,18 @@ Page Erreur 404
             <h2> Page Not Found</h2>
         </div>
     </div>
-    <div class="row">
-        <div class="col-md-6">
-            <img src="assets/images/logo.png" alt="paysage" class="present-img">
+    <div class="row text-center">
+        <div class="col-md-12">
+            <img src="/assets/images/gif/sablier.gif" alt="paysage" class="present-img">
         </div>
 
-        <div class="col-md-6">
+        <div class="col-md-12">
             <div class="produits-plus">
                 <div class="row">
-                    <div class="col-md-12 text-center">
+                    <div class="col-md-12">
                         <h1>Désolé</h1>
                         <h3>Ah! il semblerait que la page que vous recherchez n'existe pas ou est en-cours de création
                         </h3>
-
                     </div>
                 </div>
             </div>
