--- a/views/partials/modals/modalLostpass.hbs
+++ b/views/partials/modals/modalLostpass.hbs
@@ -12,14 +12,12 @@ Modal / navbar : Lost password
             <div class="modal-body">
                 <form action="/lostpassword" method="post">
                     <div class="mb-3">
-
                         <p class="fst-italic"> Nous vous enverrons le mail de réinitialisation</p>
+                        <input name="author" class="form-control" type="name" placeholder="Votre Nom"> 
                         <input name="email" type="email" class="form-control" id="loginEmail"
                             aria-describedby="emailHelp" placeholder="Votre Adresse Mail">
                         <div id="emailHelp" class="form-text"></div>
                         <button type="submit" class="btn btn-primary">Envoyer</button>
-
-
                     </div>
                     <div class="modal-footer">
                         <button type="submit" class="btn btn-contact" data-bs-target="#connectModal" data-bs-toggle="modal">Se
