reset pass & Nodemailer ok

--- a/views/partials/editPassword.hbs
+++ b/views/partials/editPassword.hbs
@@ -7,11 +7,12 @@ Page type:: Mot de passe oublié
         <h2>Editeur de Mot de passe</h2>
         <div class="text-center" id='flash'></div>
         <div class="col-md-12 text-center">
-            <img src="/assets/images/gif/sablier.gif" alt="paysage" class="present-img">
+            <img src="/assets/images/logo.png" alt="paysage" class="present-img">
         </div>
 
+        <div class="text-center" id='flash'></div>
         {{!-- Form de edition du mot de passe --}}
-        <form onsubmit="checkForm(event)" action="/editPassword/:id" method="POST" id="form" class="row g-3">
+        <form onsubmit="checkForm(event)" action="/editPassword/{{rand}}" method="POST" id="form" class="row g-3">
             {{!-- Hidden --}}
             <input type="hidden" name='email' value='{{ mailOptions.to }}'>
             <div class="row">
