--- a/views/partials/home/contact.hbs
+++ b/views/partials/home/contact.hbs
@@ -39,7 +39,7 @@
                         <div class="col-md-6">
                             <div class="contact-form">
                                 <label class="form-label">Nom:</label>
-                                <input name="Nom" type="text" class="form-control" placeholder="Ajouter votre Nom" />
+                                <input name="author" type="text" class="form-control" placeholder="Ajouter votre Nom" />
                             </div>
                         </div>
                         <div class="col-md-6">
