--- a/views/partials/contact/contact.hbs
+++ b/views/partials/contact/contact.hbs
@@ -42,7 +42,7 @@ Partial : contact/contact
                         <div class="col-md-6">
                             <div class="contact-form">
                                 <label class="form-label">Nom:</label>
-                                <input name="name" class="form-control" type="text" id="name"
+                                <input name="author" class="form-control" type="text" id="name"
                                     placeholder="Ajouter votre Nom" />
                             </div>
                         </div>
