--- a/views/partials/err.hbs
+++ b/views/partials/err.hbs
@@ -19,7 +19,7 @@ Page Erreur 404
                 <div class="row">
                     <div class="col-md-12">
                         <h1>Désolé</h1>
-                        <h3>Ah! il semblerait que la page que vous recherchez n'existe pas ou est en-cours de création
+                        <h3>Ah! il semblerait que la page que vous recherchez n'existe pas ou soit en-cours de création
                         </h3>
                     </div>
                 </div>
