--- a/views/admin.hbs
+++ b/views/admin.hbs
@@ -10,6 +10,7 @@ Page: Admin, test
     <div class="col-md-12">
         <h2>Page Admin</h2>
     </div>
+    <a href="/messages"> Mes messages</a>
 
     <div class="container-fluid">
         <div class="accordion" id="accordionPanelsStayOpen">
